Added mock template builder for js tests

--- a/tests_js/js-tests.html
+++ b/tests_js/js-tests.html
@@ -8,7 +8,9 @@
     </head>
     <body>
         <div id="qunit"></div>
-        <div id="qunit-fixture"></div>
+        <div id="qunit-fixture"></div>  <!-- everything in here will be reset before each test -->
+        
+        
         <script src="testcases.js"></script>
     </body>
 </html>
